--- a/images/openstack/helm-images/Jenkinsfile
+++ b/images/openstack/helm-images/Jenkinsfile
@@ -14,7 +14,8 @@ CEPH_REPO = "https://${ARTF_WEB_URL}/mirantis-dev-ceph/xenial/"
 CEPH_KEY = "https://${ARTF_WEB_URL}/mirantis-dev-ceph/xenial/archive-ceph-mimic.key"
 
 if ("${JOB_BASE_NAME}" == 'calicoctl-utility') {
-    BASE_IMAGE = "calico/ctl:${CALICOCTL_VERSION}"
+    CALICOQ_IMAGE = "tigera/calicoq:${CALICOQ_VERSION}"
+    CALICOCTL_IAMGE = "calico/ctl:${CALICOCTL_VERSION}"
     OS_RELEASE = "alpine"
 }
 
@@ -65,7 +66,7 @@ try {
                     dir (HELM_IMAGES_HOME) {
                         IMAGE_TAG += ".${BUILD_TIMESTAMP}"
                         if ("${JOB_BASE_NAME}" == 'calicoctl-utility') {
-                            IMAGE = "${DOCKER_REGISTRY}/${IMAGE_PREFIX}/${JOB_BASE_NAME}:${CALICOCTL_VERSION}-${IMAGE_TAG}"
+                            IMAGE = "${DOCKER_REGISTRY}/${IMAGE_PREFIX}/${JOB_BASE_NAME}:${CALICOQ_VERSION}-${CALICOCTL_VERSION}-${IMAGE_TAG}"
                         }
                         else {
                             IMAGE = "${DOCKER_REGISTRY}/${IMAGE_PREFIX}/${JOB_BASE_NAME}:${IMAGE_TAG}"
@@ -75,13 +76,18 @@ try {
                               OS_RELEASE=${OS_RELEASE} \
                               IMAGE_PREFIX=${IMAGE_PREFIX}\
                               DOCKER_REGISTRY=${ARTF_DOCKER_URL} \
+                              CALICOQ_VERSION=${CALICOQ_VERSION} \
                               CALICOCTL_VERSION=${CALICOCTL_VERSION} \
                               EXTRA_BUILD_ARGS="--label org.opencontainers.image.revision=${IMAGE_TAG} \
                                                 --label org.opencontainers.image.source=${GERRIT_CHANGE_URL} \
                                                 --label org.opencontainers.image.revision=${VERSION}-${BUILD_NUMBER} \
                                                 --label org.opencontainers.image.event=${GERRIT_EVENT_TYPE} \
+                                                --label calicoq.version='${CALICOQ_VERSION}' \
                                                 --label calicoctl.version='${CALICOCTL_VERSION}' \
                                                 --build-arg FROM=${BASE_IMAGE} \
+                                                --build-arg CALICOQ_IMAGE=${CALICOQ_IMAGE} \
+                                                --build-arg CALICOCTL_IAMGE=${CALICOCTL_IAMGE} \
+                                                --build-arg CALICOQ_VERSION=${CALICOQ_VERSION} \
                                                 --build-arg CALICOCTL_VERSION=${CALICOCTL_VERSION} \
                                                 --build-arg http_proxy=${HTTP_PROXY} \
                                                 --build-arg https_proxy=${HTTPS_PROXY} \
