Enable all components on ubuntu in debootstrap
This ps enable all the repos like main, restricted,
universe and multiverse when using debootstrap.

Signed-off-by: Sreejith Punnapuzha <Sreejith.Punnapuzha@outlook.com>
Change-Id: Id9758d3d80c8d99600c3c4fbaa87b01c8b6b4734

--- a/images/ubuntu-base-image/Jenkinsfile
+++ b/images/ubuntu-base-image/Jenkinsfile
@@ -16,7 +16,7 @@ vm2() {
         sh "sudo apt-get install -y debootstrap"
     }
     stage('Build') {
-        sh "sudo debootstrap --arch=amd64 --variant=minbase ${IMAGE_TAG} ubuntu_${IMAGE_TAG} ${Ubuntu_Repo}"
+        sh "sudo debootstrap --arch=amd64 --components=main,restricted,universe,multiverse --variant=minbase ${IMAGE_TAG} ubuntu_${IMAGE_TAG} ${Ubuntu_Repo}"
         sh "sudo tar -C ubuntu_${IMAGE_TAG} -c . | sudo docker import - ubuntu:${IMAGE_TAG}"
         IMAGE = "${DOCKER_REGISTRY}/ubuntu:${IMAGE_TAG}-${BUILD_TIMESTAMP}"
         sh "sudo docker tag ubuntu:${IMAGE_TAG} ${IMAGE}"
