--- a/code-review/Jenkinsfile
+++ b/code-review/Jenkinsfile
@@ -1,7 +1,7 @@
 import com.att.nccicd.config.conf as config
 conf = new config(env).CONF
 
-currentBuild.displayName = "#${BUILD_NUMBER} ${GERRIT_PROJECT}-${GERRIT_EVENT_TYPE}"
+currentBuild.displayName = "#${BUILD_NUMBER} ${GERRIT_PROJECT}-${env.GERRIT_EVENT_TYPE}"
 
 TOX_CHECK = ("set +e; res=0; for check in pep8 'py27 -- --concurrency=8';" +
              'do tox -e$check; res=$(( $res | $? )); done; exit $res')
@@ -61,29 +61,16 @@ try {
         node(label){
             container("ubuntu"){
                 stage('Project Checkout'){
-                    if(env.GERRIT_NEWREV){
-                        if(!GERRIT_HOST.contains('review')){
-                            gerrit.cloneToBranch("${INTERNAL_GERRIT_SSH}/${GERRIT_PROJECT}",
-                                                 GERRIT_NEWREV,
-                                                 "jenkins",
-                                                 INTERNAL_GERRIT_KEY)
-                        } else {
-                            gerrit.cloneToBranch("https://"+GERRIT_HOST+"/"+GERRIT_PROJECT, GERRIT_NEWREV, "jenkins")
-                            dir("${WORKSPACE}/jenkins"){
-                                gerrit.rebase()
-                            }
-                        }
+                    revision = env.GERRIT_NEWREV ?: env.GERRIT_PATCHSET_REVISION ?: GERRIT_REFSPEC
+                    if(!env.GERRIT_HOST.contains('review')){
+                        gerrit.cloneToBranch("${INTERNAL_GERRIT_SSH}/${GERRIT_PROJECT}",
+                                             revision,
+                                             "jenkins",
+                                             INTERNAL_GERRIT_KEY)
                     } else {
-                        if(!GERRIT_HOST.contains('review')){
-                            gerrit.cloneToBranch("${INTERNAL_GERRIT_SSH}/${GERRIT_PROJECT}",
-                                                 GERRIT_PATCHSET_REVISION,
-                                                 "jenkins",
-                                                 INTERNAL_GERRIT_KEY)
-                        } else {
-                            gerrit.cloneToBranch("https://"+GERRIT_HOST+"/"+GERRIT_PROJECT, GERRIT_PATCHSET_REVISION, "jenkins")
-                            dir("${WORKSPACE}/jenkins"){
-                                gerrit.rebase()
-                            }
+                        gerrit.cloneToBranch("https://${GERRIT_HOST}/${GERRIT_PROJECT}", revision, "jenkins")
+                        dir("${WORKSPACE}/jenkins"){
+                            gerrit.rebase()
                         }
                     }
                     // set UPPER_CONSTRAINTS_FILE from mos-requirements
