Add private_net param to loci template
Make loci template compatible with vm

Change-Id: I2cf30125707b8f3be72970c40f9d9bbd1cd60d3f

--- a/resources/heat/stack/ubuntu.loci.stack.template.yaml
+++ b/resources/heat/stack/ubuntu.loci.stack.template.yaml
@@ -6,6 +6,9 @@ parameters:
   public_net:
     type: string
     default: public
+  private_net:
+    type: string
+    default: private
   image:
     type: string
     default: cicd-ubuntu-16.04-server-cloudimg-amd64
@@ -32,7 +35,8 @@ resources:
   server_port:
     type: OS::Neutron::Port
     properties:
-      network_id: private
+      network_id:
+        get_param: private_net
       security_groups: [jenkins-security]
 
   server_floating_ip:
