--- a/images/ubuntu-base-image/Jenkinsfile
+++ b/images/ubuntu-base-image/Jenkinsfile
@@ -28,21 +28,19 @@ bootstrap=xenial xenial-updates xenial-security
 aptsources=xenial xenial-updates xenial-security
 
 [xenial]
-packages=apt
+packages=apt apt-transport-https ca-certificates libssl1.0.0 openssl
 source=https://artifacts-nc.auk3.cci.att.com/artifactory/archive-ubuntu
 keyring=ubuntu-keyring
 suite=xenial
 components=main multiverse restricted universe
 
 [xenial-updates]
-packages=apt
 source=https://artifacts-nc.auk3.cci.att.com/artifactory/archive-ubuntu
 keyring=ubuntu-keyring
 suite=xenial-updates
 components=main multiverse restricted universe
 
 [xenial-security]
-packages=apt
 source=https://artifacts-nc.auk3.cci.att.com/artifactory/archive-ubuntu
 keyring=ubuntu-keyring
 suite=xenial-security
@@ -60,27 +58,26 @@ bootstrap=bionic bionic-updates bionic-security
 aptsources=bionic bionic-updates bionic-security
 
 [bionic]
-packages=apt
+packages=apt ca-certificates
 source=https://artifacts-nc.auk3.cci.att.com/artifactory/archive-ubuntu
 keyring=ubuntu-keyring
 suite=bionic
 components=main multiverse restricted universe
 
 [bionic-updates]
-packages=apt
 source=https://artifacts-nc.auk3.cci.att.com/artifactory/archive-ubuntu
 keyring=ubuntu-keyring
 suite=bionic-updates
 components=main multiverse restricted universe
 
 [bionic-security]
-packages=apt
 source=https://artifacts-nc.auk3.cci.att.com/artifactory/archive-ubuntu
 keyring=ubuntu-keyring
 suite=bionic-security
 components=main multiverse restricted universe
 EOF"""
         sh "sudo multistrap -f ~/${IMAGE_TAG}.conf"
+        sh "sudo chmod 644 ubuntu_${IMAGE_TAG}/etc/apt/trusted.gpg.d/*.gpg"
         sh "sudo tar -C ubuntu_${IMAGE_TAG} -c . | sudo docker import - ubuntu:${IMAGE_TAG}"
         IMAGE = "${DOCKER_REGISTRY}/ubuntu:${IMAGE_TAG}-${BUILD_TIMESTAMP}"
         sh "sudo docker tag ubuntu:${IMAGE_TAG} ${IMAGE}"
