Fix gerrit commit id, take commit id from gerrit environmemt variable
git rev pase always give latest master merge commit id which might not
same as actual commit in case multiple commit merge as same time.

Change-Id: I05748c80729697fd6a0e11d58d5d31edddf547a7

--- a/charts/att-comdev/Jenkinsfile
+++ b/charts/att-comdev/Jenkinsfile
@@ -46,7 +46,8 @@ vm(flavor: FLAVOR) {
                                  CHARTS_HOME)
         }
         dir(CHARTS_HOME){
-            GIT_COMMIT = sh(returnStdout: true, script: 'git rev-parse HEAD').trim()
+//            GIT_COMMIT = sh(returnStdout: true, script: 'git rev-parse HEAD').trim()
+            GIT_COMMIT = GERRIT_NEWREV.substring(0,12) //Take GIT commit from gerrit environment variable
         }
     }
 
