(mini-mirror) Use merged commit when building image
On a change-merged event, use the NEWREV field to build the
image rather than REFSPEC to avoid losing code on non-FF
merges.

Change-Id: If9c044b65f427560bc12005ff513a1f48da97eb5

--- a/images/att-comdev/minimirror/Jenkinsfile
+++ b/images/att-comdev/minimirror/Jenkinsfile
@@ -56,7 +56,11 @@ try {
                     }
                     dir ("minimirror/mini-mirror") {
                         if("${GERRIT_PROJECT}" != "${MINIMIRROR_PROJECT}"){
-                            gerrit.cloneProject(GERRIT_CLONE_URL + "/" + conf.GLOBAL_REPO, GERRIT_REFSPEC, REFSPEC, conf.GLOBAL_REPO, conf.JENKINS_GERRIT_MTN5_CRED_ID)
+                            if(GERRIT_EVENT_TYPE == 'change-merged') {
+                              gerrit.cloneProject(GERRIT_CLONE_URL + "/" + conf.GLOBAL_REPO, GERRIT_NEWREV, REFSPEC, conf.GLOBAL_REPO, conf.JENKINS_GERRIT_MTN5_CRED_ID)
+                            } else {
+                              gerrit.cloneProject(GERRIT_CLONE_URL + "/" + conf.GLOBAL_REPO, GERRIT_REFSPEC, REFSPEC, conf.GLOBAL_REPO, conf.JENKINS_GERRIT_MTN5_CRED_ID)
+                            }
                         }else {
                             gerrit.cloneProject(GERRIT_CLONE_URL + "/" + conf.GLOBAL_REPO, CLCP_MANIFESTS, REFSPEC, conf.GLOBAL_REPO, conf.JENKINS_GERRIT_MTN5_CRED_ID)
                         }
