Add missing 'public_net' param in HEAT template
Follow up commit for https://review.gerrithub.io/c/att-comdev/cicd/+/469474

Change-Id: Id47abe45bbe0363f5090036ebedc56acb3b4183f

--- a/resources/heat/stack/ubuntu.flat.volume.stack.template.yaml
+++ b/resources/heat/stack/ubuntu.flat.volume.stack.template.yaml
@@ -3,6 +3,9 @@ heat_template_version: ocata
 description: Generic template for launching Ubuntu
 
 parameters:
+  public_net:
+    type: string
+    default: public
   private_net:
     type: string
     default: private
