--- a/images/att-comdev/minimirror/Jenkinsfile
+++ b/images/att-comdev/minimirror/Jenkinsfile
@@ -71,6 +71,8 @@ try {
                     dir ("minimirror/mini-mirror"){
                         withCredentials([string(credentialsId: 'mini-mirror-pass', variable: 'MINI_PASS')]) {
                         sh '''
+                        export NO_PROXY="${NO_PROXY}"
+                        export no_proxy="${NO_PROXY}"
                         REGISTRY_URI="${ARTF_DOCKER_URL}/att-comdev/" \
                         VERSION="${GERRIT_PATCHSET_REVISION}" DISTRO=ubuntu_xenial \
                         HTTP_PROXY=${HTTP_PROXY} HTTPS_PROXY=${HTTP_PROXY} \
