--- a/images/openstack/ranger/Jenkinsfile
+++ b/images/openstack/ranger/Jenkinsfile
@@ -3,12 +3,10 @@ import com.att.nccicd.config.conf as ncconfig
 ncconf = new ncconfig(env).CONF
 
 DOCKER_REGISTRY="${ARTF_DOCKER_URL}"
-IMAGE_TAG= "${GERRIT_PATCHSET_REVISION}"
+IMAGE_TAG="${GERRIT_PATCHSET_REVISION}"
 IMAGE_PREFIX="openstack"
-IMAGE_NAME="${IMAGE_PREFIX}/${JOB_BASE_NAME}:${IMAGE_TAG}"
-IMAGE_LATEST = "${IMAGE_PREFIX}/${JOB_BASE_NAME}:latest"
-QUAY_IMAGE_LATEST="attcomdev/${JOB_BASE_NAME}:latest"
-QUAY_IMAGE="quay.io/attcomdev/${JOB_BASE_NAME}:${IMAGE_TAG}"
+IMAGE_NAME="${IMAGE_PREFIX}/${GERRIT_BRANCH}/${JOB_BASE_NAME}:${IMAGE_TAG}"
+IMAGE_LATEST="${IMAGE_PREFIX}/${GERRIT_BRANCH}/${JOB_BASE_NAME}:latest"
 RANGER_USER=ncconf.RANGER_USER
 RANGER_AGENT_USER=ncconf.RANGER_AGENT_USER
 
@@ -36,15 +34,16 @@ try {
                     if(env.GERRIT_NEWREV){
                         echo ("${GERRIT_NEWREV} is being used to override refspec: ${GERRIT_REFSPEC}")
                         IMAGE_TAG=env.GERRIT_NEWREV
-                        QUAY_IMAGE="attcomdev/${JOB_BASE_NAME}:${IMAGE_TAG}"
                     }
 
                     gerrit.cloneToBranch("https://review.opendev.org/x/${JOB_BASE_NAME}","${IMAGE_TAG}","")
 
                     if (GERRIT_EVENT_TYPE == 'change-merged') {
-                        gerrit.rebase()
+                        sh '''git config user.email "airship.jenkins@gmail.com"
+                            git config user.name "Jenkins"
+                            git pull --rebase origin ${GERRIT_BRANCH}'''
                     }
-                    IMAGE="${DOCKER_REGISTRY}/${IMAGE_PREFIX}/${JOB_BASE_NAME}:${IMAGE_TAG}"
+                    IMAGE="${DOCKER_REGISTRY}/${IMAGE_NAME}"
                     currentBuild.displayName = "#${BUILD_NUMBER} ${GERRIT_EVENT_TYPE}"
                 }
 
@@ -62,10 +61,10 @@ try {
 
                 stage('Publish'){
                     if (GERRIT_EVENT_TYPE == 'change-merged') {
-                        artifactory.upload (IMAGE, "${IMAGE_PREFIX}/${JOB_BASE_NAME}:${IMAGE_TAG}.${BUILD_TIMESTAMP}")
+                        artifactory.upload (IMAGE, "${IMAGE_NAME}.${BUILD_TIMESTAMP}")
                         artifactory.upload (IMAGE, IMAGE_LATEST)
                     } else {
-                        artifactory.upload (IMAGE, "test/${IMAGE_PREFIX}/${JOB_BASE_NAME}:${IMAGE_TAG}")
+                        artifactory.upload (IMAGE, "test/${IMAGE_NAME}")
                     }
                 }
             }
